--- a/src/pages/auth/login/login.css
+++ b/src/pages/auth/login/login.css
@@ -1,12 +1,10 @@
-*{
+* {
     margin: 0;
 }
 
 .login-form {
     max-width: 350px;
-    /* tối đa rộng 300px */
     width: 80%;
-    /* chiếm 90% màn hình khi nhỏ hơn 300px */
     margin: 0 auto;
     padding: 30px;
     border: 1px solid #ccc;
@@ -14,14 +12,13 @@
     background-color: #f9f9f9;
 }
 
-.login-form img{
+.login-form img {
     display: block;
     margin: 0 auto 10px;
 }
 
-
 .login-form input {
-    font-size: 16px; 
+    font-size: 16px;
     width: 100%;
     padding: 16px;
     margin: 8px 0px;
@@ -30,33 +27,39 @@
     border-radius: 8px;
 }
 
-
-.login-form label{
+.login-form label {
     display: block;
     margin-bottom: 2px;
-    color: #555;    
+    color: #555;
 }
 
 .login-form button {
     margin-top: 12px;
     width: 100%;
-    padding: 10px;
-    background-color: #71A5E0;
+    padding: 12px;
+    background-color: #137ae1;
     color: white;
     border: none;
-    border-radius: 5px;
+    border-radius: 8px; 
     cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    transition: all 0.3s ease; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
 }
 
 .login-form button:hover {
-    background-color: #0056b3;
+    background-color: #242ee3; 
+    transform: translateY(-4px); 
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
 }
 
 .login-form button:disabled {
-  opacity: 0.4;
-  cursor: not-allowed;
+    opacity: 0.4;
+    cursor: not-allowed;
+    background-color: #9e9e9e; 
+    box-shadow: none; 
 }
-
 
 .login-container {
     height: 100vh;
